--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 </head>
 <body>
-  
+  <div id="app">
+    <main>
+      <div class="main-container">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, odit reiciendis itaque numquam dolor quaerat, distinctio aliquam perferendis temporibus sunt dicta suscipit cumque accusantium modi tenetur unde ut dignissimos odio!
+      </div>
+    </main>
+
+    <aside>
+      <div class="aside-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consequatur aliquid quasi magni iure officiis, nemo quos necessitatibus ipsa officia laborum, dolorum reiciendis dolorem cum numquam, ratione eaque? In, hic.
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
