Aside content and initial content of main

--- a/index.html
+++ b/index.html
@@ -15,13 +15,34 @@
   <div id="app">
     <main>
       <div class="main-container">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, odit reiciendis itaque numquam dolor quaerat, distinctio aliquam perferendis temporibus sunt dicta suscipit cumque accusantium modi tenetur unde ut dignissimos odio!
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="Icone de voltar">
+          <span>Voltar</span>
+        </div>
+
+        <h1>Formulário de matrícula</h1>
+        <p>
+          Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.
+        </p>
       </div>
     </main>
 
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consequatur aliquid quasi magni iure officiis, nemo quos necessitatibus ipsa officia laborum, dolorum reiciendis dolorem cum numquam, ratione eaque? In, hic.
+        <header>
+          <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
+          <h2>Porque cada momento de 
+            <span>
+              aprendizado 
+            </span>
+            conta
+          </h2>
+          <p>
+            Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.
+          </p>
+        </header>
+
+        <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
       </div>
     </aside>
   </div>
