--- a/index.html
+++ b/index.html
@@ -84,10 +84,6 @@
               <input type="text" id="cep" name="cep">
             </div>
 
-
-
-
-
             <div class="flex">
               <div class="input-wrapper flex-2">
                 <label for="street">Rua</label>
@@ -101,11 +97,6 @@
               </div>
             </div>
 
-
-
-
-
-
             <div class="flex">
               <div class="input-wrapper flex-2">
                 <label for="city">Cidade</label>
@@ -118,6 +109,33 @@
                 <input type="text" id="state" name="state" disabled value="SP">
               </div>
             </div>
+
+          </fieldset>
+
+          <fieldset class="gardian">
+            <legend>Informações do responsável</legend>
+
+            <div class="input-wrapper">
+              <label for="gardian">Nome do responsável</label>
+              <input type="text" id="gardian" name="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="text" id="phone" name="phone"
+              placeholder="(10) 9 8765-4321">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="mail">Email</label>
+              <input type="email" name="mail" id="mail" required>
+              <div class="error">
+                <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+
 
           </fieldset>
         </form>
